# quaxed

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  SECURITY.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: build_docs.yml  cd.yml  ci.yml  codspeed.yml  labeler.yml  ossar.yml  sync-labels.yml
benchmarks/: __init__.py  test_benchmarks.py
docs/: conf.py  index.md  requirements.txt
docs/api/: array_api.md  arrayish.md  lax.md  numpy.md  operator.md  quaxed.md  scipy.md
src/array_api_jax_compat/: __init__.py  _constants.py  _creation_functions.py  _data_type_functions.py  _elementwise_functions.py  _grad.py  _indexing_functions.py  _linear_algebra_functions.py  _manipulation_functions.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py  _types.py  _utility_functions.py  _utils.py  fft.py  linalg.py
src/array_api_jax_compat/_array_api/: __init__.py  _creation_functions.py  _data_type_functions.py  _elementwise_functions.py  _indexing_functions.py  _linear_algebra_functions.py  _manipulation_functions.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py  _utility_functions.py  fft.py  linalg.py
src/quaxed/: __init__.py  _jax.py  _setup.py  _types.py  _utils.py  lax.py  operator.py  operator.pyi
src/quaxed/_tools/: make_numpy_stub.py  make_stubs.py
src/quaxed/array_api/: __init__.py  _constants.py  _creation_functions.py  _data_type_functions.py  _dispatch.py  _elementwise_functions.py  _indexing_functions.py  _linear_algebra_functions.py  _manipulation_functions.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py  _types.py  _utility_functions.py  fft.py  linalg.py
src/quaxed/experimental/: __init__.py  arrayish.py
src/quaxed/experimental/_arrayish/: __init__.py  binary.py  container.py  copy.py  example.py  rich.py  round.py  unary.py
src/quaxed/lax/: __init__.py  __init__.pyi  _patch.py  linalg.py  linalg.pyi
src/quaxed/numpy/: __init__.py  __init__.pyi  _core.py  _creation_functions.py  _dispatch.py  _higher_order.py  core.py  fft.py  linalg.py
src/quaxed/scipy/: __init__.py  linalg.py  special.py  special.pyi
tests/: myarray.py  test_jax.py  test_myarray.py  test_package.py
tests/array_api/: __init__.py  myarray.py  test_jax.py  test_myarray.py
tests/lax/: test_jax.py
tests/numpy/: test_jax.py
tests/scipy/: __init__.py  test_jax.py
tests/static/: numpy.pyi
tests/test_lax/: __init__.py  test_jax.py  test_myarray.py  test_package.py
tests/test_numpy/: test_custom_array_typing.py  test_fallback_warning.py  test_jax.py  test_myarray.py  test_package.py
tests/test_operator/: __init__.py  test_jax.py  test_myarray.py
tests/test_scipy/: test_jax.py  test_package.py
tests/unit/: __init__.py  conftest.py  test_package.py
tests/unit/test_lax/: test_myarray.py  test_package.py
tests/unit/test_numpy/: __init__.py  test_jax.py  test_myarray.py  test_package.py
tests/unit/test_operator/: test_myarray.py  test_package.py
tests/unit/test_scipy/: test_package.py
tools/: make_numpy_stub.py  update_numpy_stub.py
