[project]
name = "quaxed"
dynamic = ["version"]
description = "Pre-quaxed libraries for multiple dispatch over abstract array types in JAX"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nathaniel Starkman", email = "nstarman@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "equinox>=0.13.2",
  "jax>=0.5.3",
  "jaxtyping>=0.3.1",
  "optype>=0.8.0",
  "plum-dispatch>=2.5.2",
  "quax>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/GalacticDynamics/quaxed"
"Bug Tracker" = "https://github.com/GalacticDynamics/quaxed/issues"
Discussions = "https://github.com/GalacticDynamics/quaxed/discussions"
Changelog = "https://github.com/GalacticDynamics/quaxed/releases"

[project.scripts]
quaxed-make-stubs = "quaxed._tools.make_stubs:main"


[build-system]
requires = ["hatchling", "hatch-vcs", "jax>=0.5.3", "quax>=0.2.1"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
  "cz-conventional-gitmoji>=0.6.1",
  {include-group = "build"},
  {include-group = "docs"},
  {include-group = "jupyter"},
  {include-group = "lint"},
  {include-group = "nox"},
  {include-group = "test"},
]
docs = [
  "hippogriffe==0.2.0",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1",
  "mkdocs-material==9.6.7",
  "mkdocstrings[python]==0.28.3",
  "pymdown-extensions==10.16.1",
]
jupyter = [
    "ipykernel>=6.29.5",
]
lint = [
    "mypy>=1.19.0",
    "pre-commit>=4.2.0",
    "pylint>=4.0.3",
    "pyright>=1.1.407",
    "ruff>=0.14.6",
]
nox = [
    "nox>=2025.11.12",
    "nox-uv>=0.6.3",
]
test = [
  "optional-dependencies>=0.4.0",
  "mypy>=1.19.0",
  "pytest>=8.3",
  "pytest-cov>= 6.2.1",
  "pytest-env>=1.1.5",
  "pytest-github-actions-annotate-failures>=0.3.0", # only applies to GHA
  "sybil[pytest]>=9.2.0",
  "typing_extensions"
]
build = [
    "hatchling>=1.28.0",
]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/quaxed/_version.py"
build.hooks.custom.path = "src/quaxed/_tools/make_numpy_stub.py"


[tool.codespell]
skip = [
  "uv.lock",
  "src/quaxed/_tools/make_numpy_stub.py",
  "src/quaxed/numpy/__init__.pyi"
]
ignore-words-list = """
    fro,
"""


[tool.commitizen]
name = "cz_gitmoji"


[tool.coverage]
run.source = ["quaxed"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if TYPE_CHECKING:'
]


[tool.mypy]
files = ["src"]
python_version = "3.11"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool", "unused-ignore"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
  module = "quaxed.*"
  disallow_untyped_defs = true
  disallow_incomplete_defs = true

[[tool.mypy.overrides]]
  module = ["jax.*", "jaxtyping.*", "plum.*", "quax.*"]
  ignore_missing_imports = true


[tool.pyright]
include = ["src"]
exclude = ["src/quaxed/numpy/__init__.pyi"]
reportUnnecessaryTypeIgnoreComment = "error"


[tool.pylint]
py-version = "3.11"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "C0415",  # Import outside toplevel -- handled by ruff
  "design",
  "fixme",
  "line-too-long",
  "missing-function-docstring", # TODO: reinstate.
  "missing-module-docstring",
  "redefined-builtin",
  "unused-argument",  # handled by ruff
  "useless-import-alias",  # handled by ruff
  "wrong-import-position",
  "R0801",  # Similar lines
]


[tool.pytest.ini_options]
minversion = "8.3"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  # jaxtyping
  "ignore:ast\\.Str is deprecated and will be removed in Python 3.14:DeprecationWarning",
  # jax
  "ignore:jax\\.core\\.pp_eqn_rules is deprecated:DeprecationWarning",
]
log_cli_level = "INFO"
log_level = "INFO"
testpaths = ["src", "docs", "tests"]
norecursedirs = ["src/quaxed/_tools"]


[tool.pytest_env]
JAX_CHECK_TRACER_LEAKS = 1


[tool.ruff]
[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "A001",   # Variable is shadowing a Python builtin
  "A002",   # Argument is shadowing a Python builtin
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed  # TODO
  "ARG001", # Unused function argument
  "COM812", # Missing trailing comma
  "D103",   # Missing docstring in public function  # TODO
  "D203",   # one-blank-line-before-class
  "D213",   # Multi-line docstring summary should start at the second line
  "ISC001", # handled by formatter
  "ERA001", # Found commented-out code
  "F811",   # Redefinition of unused variable  <- plum
  "FIX002", # Line contains TODO, consider resolving the issue
  "PD011",  # Pandas
  "PYI041", # Use `float` instead of `int | float`
  "RUF022", # `__all__` is not sorted
  "TD002",  # Missing author in TODO; try: `# TODO(<author_name>): .
  "TD003",  # Missing issue link on the line following this TODO
]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.per-file-ignores]
"src/quaxed/**" = ["A004"]
"src/quaxed/numpy/__init__.pyi" = ["ALL"]
"tests/**" = ["ANN", "C419", "FBT001", "INP001", "N816", "PLR0913", "PLR2004", "S101", "T20", "TID252"]
"tests/static/**" = ["F841", "PYI015"]
"__init__.py" = ["F403"]
"noxfile.py" = ["T20"]
"docs/**" = ["INP001"]
"scratch/**" = ["ANN", "D", "FBT", "INP"]
"src/quaxed/_tools/**" = ["E501", "INP001", "RET504"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.repo-review]
ignore = ["PC140"]

[tool.uv]
constraint-dependencies = [
  "appnope>=0.1.2",
  "bleach>6.0",
  "cffi>=1.14",
  "decorator>=5.1.1",
  "matplotlib>=3.7.1",
  "matplotlib-inline>=0.1.6",
  "opt-einsum>=3.2.1",
  "pickleshare>=0.7.5",
  "psutil>=5.9.0",
  "pyparsing>=3.0.0",
  "pyzmq>=25.0",
]
