[project]
authors = [
  { name = "Nathaniel Starkman", email = "nstarman@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "equinox>=0.13.2",
  "jax>=0.5.3",
  "jaxtyping>=0.3.1",
  "optype>=0.8.0",
  "plum-dispatch>=2.5.2",
  "quax>=0.2.1",
]
description = "Pre-quaxed libraries for multiple dispatch over abstract array types in JAX"
dynamic = ["version"]
name = "quaxed"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
"Bug Tracker" = "https://github.com/GalacticDynamics/quaxed/issues"
Changelog     = "https://github.com/GalacticDynamics/quaxed/releases"
Discussions   = "https://github.com/GalacticDynamics/quaxed/discussions"
Homepage      = "https://github.com/GalacticDynamics/quaxed"

[project.scripts]
quaxed-make-stubs = "quaxed._tools.make_stubs:main"


[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling", "hatch-vcs", "jax>=0.5.3", "quax>=0.2.1"]


[dependency-groups]
build = ["hatchling>=1.28.0"]
dev = [
  "cz-conventional-gitmoji>=0.6.1",
  { include-group = "build" },
  { include-group = "docs" },
  { include-group = "jupyter" },
  { include-group = "lint" },
  { include-group = "nox" },
  { include-group = "test" },
]
docs = [
  "hippogriffe==0.2.0",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1",
  "mkdocs-material==9.6.7",
  "mkdocstrings[python]==0.28.3",
  "pymdown-extensions==10.16.1",
]
jupyter = ["ipykernel>=6.29.5"]
lint = [
  "mypy>=1.19.0",
  "pre-commit>=4.2.0",
  "pylint>=4.0.3",
  "pyright>=1.1.407",
  "ruff>=0.14.6",
]
nox = ["nox>=2025.11.12", "nox-uv>=0.6.3"]
test = [
  "optional-dependencies>=0.4.0",
  "mypy>=1.19.0",
  "pytest>=8.3",
  "pytest-cov>= 6.2.1",
  "pytest-env>=1.1.5",
  "pytest-github-actions-annotate-failures>=0.3.0", # only applies to GHA
  "sybil[pytest]>=9.2.0",
  "typing_extensions",
]


[tool.hatch]
build.hooks.custom.path = "src/quaxed/_tools/make_numpy_stub.py"
build.hooks.vcs.version-file = "src/quaxed/_version.py"
build.hooks.vcs.version-file-template = """\
version: str = {version!r}
version_tuple: tuple[int, int, int] | tuple[int, int, int, str, str]
version_tuple = {version_tuple!r}
"""
version.source = "vcs"


[tool.codespell]
ignore-words-list = """
    fro,
"""
skip = [
  "uv.lock",
  "src/quaxed/_tools/make_numpy_stub.py",
  "src/quaxed/numpy/__init__.pyi",
]


[tool.commitizen]
name = "cz_gitmoji"


[tool.coverage]
report.exclude_lines = ['pragma: no cover', '\.\.\.', 'if TYPE_CHECKING:']
run.source           = ["quaxed"]


[tool.mypy]
disallow_incomplete_defs = false
disallow_untyped_defs = false
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
  "unused-ignore",
]
files = ["src"]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
disallow_incomplete_defs = true
disallow_untyped_defs    = true
module                   = "quaxed.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module                 = ["jax.*", "jaxtyping.*", "plum.*", "quax.*"]


[tool.pyright]
exclude                            = ["src/quaxed/numpy/__init__.pyi"]
include                            = ["src"]
reportUnnecessaryTypeIgnoreComment = "error"


[tool.pylint]
ignore-paths = [".*/_version.py"]
messages_control.disable = [
  "C0415",                      # Import outside toplevel -- handled by ruff
  "design",
  "fixme",
  "line-too-long",
  "missing-function-docstring", # TODO: reinstate.
  "missing-module-docstring",
  "redefined-builtin",
  "unused-argument",            # handled by ruff
  "useless-import-alias",       # handled by ruff
  "wrong-import-position",
  "R0801",                      # Similar lines
]
py-version = "3.11"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"


[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = [
  "error",
  # jaxtyping
  "ignore:ast\\.Str is deprecated and will be removed in Python 3.14:DeprecationWarning",
  # jax
  "ignore:jax\\.core\\.pp_eqn_rules is deprecated:DeprecationWarning",
]
log_cli_level = "INFO"
log_level = "INFO"
minversion = "9"
norecursedirs = ["src/quaxed/_tools"]
testpaths = ["src", "docs", "tests"]
xfail_strict = true


[tool.pytest_env]
JAX_CHECK_TRACER_LEAKS = 1


[tool.ruff]
[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "A001",   # Variable is shadowing a Python builtin
  "A002",   # Argument is shadowing a Python builtin
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed  # TODO
  "ARG001", # Unused function argument
  "COM812", # Missing trailing comma
  "D103",   # Missing docstring in public function  # TODO
  "D203",   # one-blank-line-before-class
  "D213",   # Multi-line docstring summary should start at the second line
  "ISC001", # handled by formatter
  "ERA001", # Found commented-out code
  "F811",   # Redefinition of unused variable  <- plum
  "FIX002", # Line contains TODO, consider resolving the issue
  "PD011",  # Pandas
  "PYI041", # Use `float` instead of `int | float`
  "RUF022", # `__all__` is not sorted
  "TD002",  # Missing author in TODO; try: `# TODO(<author_name>): .
  "TD003",  # Missing issue link on the line following this TODO
]

[tool.ruff.lint.isort]
combine-as-imports     = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"docs/**" = ["INP001"]
"noxfile.py" = ["T20"]
"scratch/**" = ["ANN", "D", "FBT", "INP"]
"src/quaxed/**" = ["A004"]
"src/quaxed/_tools/**" = ["E501", "INP001", "RET504"]
"src/quaxed/numpy/__init__.pyi" = ["ALL"]
"tests/**" = [
  "ANN",
  "C419",
  "FBT001",
  "INP001",
  "N816",
  "PLR0913",
  "PLR2004",
  "S101",
  "T20",
  "TID252",
]
"tests/static/**" = ["F841", "PYI015"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.repo-review]
ignore = ["PC140"]

[tool.uv]
constraint-dependencies = [
  "appnope>=0.1.2",
  "bleach>6.0",
  "cffi>=1.14",
  "decorator>=5.1.1",
  "matplotlib>=3.7.1",
  "matplotlib-inline>=0.1.6",
  "opt-einsum>=3.2.1",
  "pickleshare>=0.7.5",
  "psutil>=5.9.0",
  "pyparsing>=3.0.0",
  "pyzmq>=25.0",
]
